--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,11 +39,12 @@ a {
 button {
     border: none;
     background: transparent;
+    padding: 0;
 }
 
 /* Common */
 .container {
-    width: 1170px;
+    width: 1140px;
     max-width: calc(100vw - 64px);
     margin: 0 auto;
 }
@@ -104,10 +105,11 @@ button {
     min-width: 173px;
     border-radius: 40px;
     background: var(--Primary-color-black-green);
-    padding: 13.5px 16px;
+    padding: 14.6px 16px;
     color: var(--white);
     font-size: 1.8rem;
-    line-height: 1.67;
+    font-weight: 500;
+    line-height: 1.55;
     user-select: none;
 }
 
@@ -124,21 +126,20 @@ button {
 }
 
 .heading {
-    color: var(--primary);
-    font-size: 5rem;
+    color: var(--Primary-text-color-black);
+    font-size: 4.2rem;
     font-weight: 600;
-}
-
-.heading--lv1 {
-    color: var(--white);
-    font-size: 7rem;
-    line-height: 1.14;
-    letter-spacing: -1.4px;
-}
-
-.heading--lv2 {
     line-height: 1.2;
-    letter-spacing: -1px;
+}
+
+.heading--large {
+    font-size: 5rem;
+    font-weight: 800;
+}
+
+.heading--smaller {
+    font-size: 1.8rem;
+    line-height: 1.67;
 }
 
 .heading--lv3 {
@@ -156,10 +157,10 @@ button {
 }
 
 .desc {
-    color: var(--text-color);
+    color: var(--text-color-black-gray);
     font-size: 1.8rem;
-    font-weight: 300;
-    line-height: 1.67;
+    font-weight: 500;
+    line-height: 1.56;
 }
 
 .desc--light {
@@ -186,7 +187,6 @@ button {
     background-position: 50%;
     background-size: cover;
     background-repeat: no-repeat;
-    border-radius: 6px;
 }
 
 .controls {
@@ -298,36 +298,166 @@ button {
 /* Hero */
 .hero {
     background: var(--primary);
-    padding: 68px 0 110px;
+    padding: 60px 0 88px;
 }
 
 /* Hero__content */
 .hero__content {
-    width: 517px;
+    font-family: var(--font-family-secondary);
+}
+
+.hero__heading {
+    width: 368px;
 }
 
 .hero__desc {
-    margin: 22px 0 38px;
+    width: 341px;
+    margin: 20px 0 42px;
 }
 
-.cta-block__desc {
-    color: var(--white);
-    font-weight: 400;
-    margin-left: 38px;
+.hero__cta-block {
+    column-gap: 36px;
+}
+
+/* Hero watch video btn */
+.watch-video-btn__outer {
+    column-gap: 8.5px;
+}
+
+.watch-video-btn {
+    --light-green: #83a17d;
+    --width: 5.7em;
+    --height: 5.9em;
+
+    font-size: 1rem;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: var(--width);
+    height: var(--height);
+    border-radius: 50%;
+    background: var(--Primary-color-black-green);
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.watch-video-btn::before {
+    position: absolute;
+    content: '';
+    width: calc(var(--width) - 0.8em);
+    height: calc(var(--height) - 0.8em);
+    border-radius: 50%;
+    background: var(--white);
+}
+
+.watch-video-btn::after {
+    position: absolute;
+    top: -0.1em;
+    left: 50%;
+    content: '';
+    width: calc(var(--width) / 2);
+    height: calc(var(--height) + 0.2em);
+    background: var(--white);
+    border-top-right-radius: 100em;
+    border-bottom-right-radius: 100em;
+}
+
+.watch-video-btn__outer:hover .watch-video-btn {
+    rotate: 180deg;
+    background: var(--light-green);
+}
+
+.watch-video-btn__outer:hover .watch-video-btn__inner {
+    rotate: 180deg;
+    background: var(--Primary-color-black-green);
+}
+
+.watch-video-btn__inner {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 4.4em;
+    height: 4.3em;
+    border-radius: 50%;
+    background: var(--light-green);
+    z-index: 1;
+    transition: 0.25s;
+}
+
+.watch-video-btn__label {
+    margin: -20px 0;
 }
 
 /* Hero__img-block */
-.hero__img-1 {
+.hero__media {
     position: relative;
-    width: 330px;
-    height: 540px;
+    margin-right: 28px;
+    margin-left: auto;
+}
+
+.hero__img-block {
+    display: grid;
+    grid-template-columns: repeat(3, 202px);
+    grid-template-rows: 77px 312px 77px;
+    column-gap: 20px;
+}
+
+.img-block__image {
+    border-radius: 110px;
+}
+
+.img-block__img-1 {
+    grid-area: 1 / 1 / 3 / 2;
     background-image: url('../img/hero-1.png');
 }
 
-.hero__img-2 {
-    margin-left: -6px;
-    border-radius: 0px 6px 6px 0px;
-    width: 210px;
-    height: 410px;
+.img-block__img-2 {
+    grid-area: 2 / 2 / -1 / -2;
     background-image: url('../img/hero-2.png');
+}
+
+.img-block__img-3 {
+    grid-area: 1 / -2 / 3 / -1;
+    background-image: url('../img/hero-3.png');
+}
+
+/* hero background */
+.hero__bg {
+    position: absolute;
+}
+
+.bg__circle-center {
+    top: 122px;
+    left: 156px;
+    width: 340px;
+    height: 340px;
+    border-radius: 340px;
+    background: #4dbb9a;
+    filter: blur(137px);
+    z-index: -1;
+}
+
+.bg__winding-line--top {
+    top: -32.07px;
+    left: -168px;
+}
+
+.bg__asterisk--top {
+    left: -208.58px;
+    bottom: 407.61px;
+    transform: rotate(9.392deg);
+}
+
+.bg__winding-line--bottom {
+    bottom: -73.69px;
+    right: 50.64px;
+    transform: rotate(175.95deg);
+}
+
+.bg__asterisk--bottom {
+    bottom: -38px;
+    right: 8.12px;
+    transform: rotate(-174.659deg);
 }
