--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,13 +3,10 @@
     --font-family-secondary: 'Public Sans', sans-serif;
     --Primary-color-black-green: #143c3c;
     --Secondary-color-light-green: #e2eddf;
+    --Tertiary-color-light-green: #83a17d;
     --Primary-text-color-black: #152427;
     --text-color-black-gray: #575d5e;
-    --bg-color-secondary: #2e80ce;
-    --bg-color-tertiary: #eaf6ff;
-    --bg-color-quaternary: #f6fbff;
     --white: #fff;
-    --text-color-secondary: #a9b3bb;
 }
 
 html,
@@ -26,7 +23,7 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     font-weight: 400;
-    color: var(--Primary-text-color-black);
+    color: var(--text-color-black-gray);
 }
 
 * {
@@ -55,7 +52,7 @@ button {
     align-items: center;
 }
 
-.padding-y {
+.padding-y-70 {
     padding: 70px 0;
 }
 
@@ -96,6 +93,10 @@ button {
 
 .line-clamp.line-3 {
     --line-clamp: 3;
+}
+
+.absolute {
+    position: absolute;
 }
 
 .btn {
@@ -183,6 +184,11 @@ button {
     line-height: 1.56;
 }
 
+.desc--small {
+    font-size: 1.6rem;
+    line-height: 1.62;
+}
+
 .desc--smaller {
     font-size: 1.4rem;
     line-height: 1.71;
@@ -226,7 +232,7 @@ button {
     background: var(--Primary-color-black-green);
 }
 
-/* Header */
+/* ------------- Header ------------- */
 .header {
     background: var(--white);
 }
@@ -308,7 +314,7 @@ button {
     text-decoration: underline;
 }
 
-/* Hero */
+/* ------------- Hero ------------- */
 .hero {
     background: var(--primary);
     padding: 60px 0 88px;
@@ -338,7 +344,6 @@ button {
 }
 
 .watch-video-btn {
-    --light-green: #83a17d;
     --width: 5.7em;
     --height: 5.9em;
 
@@ -378,7 +383,7 @@ button {
 
 .watch-video-btn__outer:hover .watch-video-btn {
     rotate: 180deg;
-    background: var(--light-green);
+    background: var(--Tertiary-color-light-green);
 }
 
 .watch-video-btn__outer:hover .watch-video-btn__inner {
@@ -394,7 +399,7 @@ button {
     width: 4.4em;
     height: 4.3em;
     border-radius: 50%;
-    background: var(--light-green);
+    background: var(--Tertiary-color-light-green);
     z-index: 1;
     transition: 0.25s;
 }
@@ -437,11 +442,7 @@ button {
 }
 
 /* hero background */
-.hero__bg {
-    position: absolute;
-}
-
-.bg__circle-center {
+.hero-bg__circle-center {
     top: 122px;
     left: 156px;
     width: 340px;
@@ -452,30 +453,30 @@ button {
     z-index: -1;
 }
 
-.bg__winding-line--top {
+.hero-bg__winding-line--top {
     top: -32.07px;
     left: -168px;
 }
 
-.bg__asterisk--top {
+.hero-bg__asterisk--top {
     left: -208.58px;
     bottom: 407.61px;
     transform: rotate(9.392deg);
 }
 
-.bg__winding-line--bottom {
+.hero-bg__winding-line--bottom {
     bottom: -73.69px;
     right: 50.64px;
     transform: rotate(175.95deg);
 }
 
-.bg__asterisk--bottom {
+.hero-bg__asterisk--bottom {
     bottom: -38px;
     right: 8.12px;
     transform: rotate(-174.659deg);
 }
 
-/* Clients */
+/* ------------- Clients ------------- */
 .clients {
     margin-top: 42px;
 }
@@ -515,7 +516,7 @@ button {
     padding-left: 7px;
 }
 
-/* Services */
+/* ------------- Services ------------- */
 .services {
     margin-top: 36px;
 }
@@ -583,4 +584,195 @@ button {
     background: #fff;
     box-shadow: -6px 9px 64px -4px rgba(118, 118, 118, 0.25);
     padding: 110px 18px 23px;
+}
+
+/* ------------- About-us ------------- */
+.about-us {
+    margin-top: 57px;
+    padding: 30px 0;
+}
+
+.about-us__body {
+    display: flex;
+    justify-content: space-between;
+}
+
+/* About us media */
+.about-us__media {
+    position: relative;
+}
+
+.about-us__img-block {
+    display: flex;
+}
+
+.about-us__img {
+    height: 480px;
+    border-radius: 210px;
+    box-shadow: 0px 4px 234px 11px rgba(59, 137, 71, 0.25);
+}
+
+.about-us__img-1 {
+    margin: 90px 21px 0 0;
+    width: 284px;
+    background-image: url('../img/about-us-1.png');
+}
+
+.about-us__img-2 {
+    margin-top: 13px;
+    width: 286px;
+    background-image: url('../img/about-us-2.png');
+}
+
+/* About us content */
+.about-us__content {
+    width: 485px;
+}
+
+.about-us__heading {
+    margin: 20px 0 11px;
+}
+
+/* About us stat */
+.about-us__stat {
+    margin-top: 18px;
+    display: flex;
+    column-gap: 24px;
+    padding: 20px 0;
+    border-bottom: 1px solid var(--Tertiary-color-light-green);
+}
+
+/* About us designers card */
+.about-us__designers-card {
+    position: absolute;
+    right: -9px;
+    bottom: 8px;
+    --light-gray: #eaeaea;
+    width: 143px;
+    height: 144px;
+    padding: 16px 17px 11px;
+    font-family: var(--font-family-secondary);
+    border-radius: 8px;
+    background: var(--white);
+    box-shadow: 0px 7px 54px 0px rgba(154, 154, 154, 0.25);
+    font-size: 1rem;
+    line-height: 1.4;
+}
+
+/* Designers card header */
+.designers-card__header {
+    padding: 3px 6px;
+}
+
+.designers-card__title {
+    font-size: 1.4rem;
+    line-height: 1;
+}
+
+.designers-card__title--sub {
+    margin: 6px 0 10px;
+    color: var(--text-color-black-gray);
+    opacity: 0.4;
+}
+
+.designers-card__desc {
+    color: var(--Primary-text-color-black);
+    font-weight: 500;
+}
+
+.designers-card__desc--right-align {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.designers-card__process-bar {
+    margin: 3px 0;
+    position: relative;
+    width: 96px;
+    height: 2px;
+    border-radius: 10px;
+    background: var(--light-gray);
+}
+
+.designers-card__process-bar::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: inline-block;
+    content: '';
+    width: 40px;
+    height: 100%;
+    border-radius: 10px;
+    background: var(--Tertiary-color-light-green);
+}
+/* ---------------- */
+.designers-card__circle-icon {
+    position: relative;
+    width: 11px;
+    height: 11px;
+    border-radius: 50%;
+    background: var(--light-gray);
+    margin: 0 0 4px 2px;
+}
+
+.designers-card__circle-icon::after {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: inline-block;
+    content: '';
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background: var(--Primary-color-black-green);
+}
+
+/* Designers card footer */
+.designers-card__footer {
+    justify-content: space-between;
+}
+
+.designers-card__avatar-block {
+    display: flex;
+}
+
+.designers-card__avatar + .designers-card__avatar {
+    margin-left: -6px;
+}
+
+.designers-card__avatar {
+    width: 16px;
+    height: 16px;
+    border-radius: 16px;
+    border: 1px solid var(--white);
+}
+
+.designers-card__avatar-1 {
+    background-image: url('../img/designer-card-1.png');
+}
+
+.designers-card__avatar-2 {
+    background-image: url('../img/designer-card-2.png');
+}
+
+.designers-card__avatar-3 {
+    background-image: url('../img/designer-card-3.png');
+}
+
+.designers-card__avatar-4 {
+    background-image: url('../img/designer-card-4.png');
+}
+
+/* About us background */
+.about-us-bg__winding-line {
+    top: 21.11px;
+    left: 51.23px;
+    transform: rotate(12.645deg);
+}
+
+.about-us-bg__asterisk {
+    top: -31px;
+    left: 46px;
+    transform: rotate(176.985deg);
 }
