--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -339,11 +339,11 @@ button {
 }
 
 /* Hero watch video btn */
-.watch-video-btn__outer {
+.hero__play-btn {
     column-gap: 8.5px;
 }
 
-.watch-video-btn {
+.hero__play-btn--half--circle {
     --width: 5.7em;
     --height: 5.9em;
 
@@ -354,44 +354,26 @@ button {
     align-items: center;
     width: var(--width);
     height: var(--height);
+    border: 4px solid;
+    color: var(--Primary-color-black-green);
+    border-color: currentColor transparent transparent currentColor;
     border-radius: 50%;
-    background: var(--Primary-color-black-green);
     transition: 0.3s;
     cursor: pointer;
+    rotate: -45deg;
 }
 
-.watch-video-btn::before {
-    position: absolute;
-    content: '';
-    width: calc(var(--width) - 0.8em);
-    height: calc(var(--height) - 0.8em);
-    border-radius: 50%;
-    background: var(--white);
+.hero__play-btn:hover .hero__play-btn--half--circle {
+    rotate: 135deg;
+    color: var(--Tertiary-color-light-green);
 }
 
-.watch-video-btn::after {
-    position: absolute;
-    top: -0.1em;
-    left: 50%;
-    content: '';
-    width: calc(var(--width) / 2);
-    height: calc(var(--height) + 0.2em);
-    background: var(--white);
-    border-top-right-radius: 100em;
-    border-bottom-right-radius: 100em;
-}
-
-.watch-video-btn__outer:hover .watch-video-btn {
-    rotate: 180deg;
-    background: var(--Tertiary-color-light-green);
-}
-
-.watch-video-btn__outer:hover .watch-video-btn__inner {
-    rotate: 180deg;
+.hero__play-btn:hover .hero__play-btn--circle {
+    rotate: -135deg;
     background: var(--Primary-color-black-green);
 }
 
-.watch-video-btn__inner {
+.hero__play-btn--circle {
     position: relative;
     display: flex;
     justify-content: center;
@@ -400,11 +382,10 @@ button {
     height: 4.3em;
     border-radius: 50%;
     background: var(--Tertiary-color-light-green);
-    z-index: 1;
-    transition: 0.25s;
+    rotate: 45deg;
 }
 
-.watch-video-btn__label {
+.hero__play-btn__label {
     margin: -20px 0;
 }
 
