--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@ button {
 
 .heading--has-tail::after {
     position: relative;
-    left: 8px;
+    left: 10px;
     bottom: 8px;
     content: '';
     display: inline-block;
@@ -756,4 +756,112 @@ button {
     top: -31px;
     left: 46px;
     transform: rotate(176.985deg);
+}
+
+/* ------------- Process ------------- */
+.process {
+    margin-top: 19px;
+    padding: 30px 0;
+}
+
+.process__label {
+    margin-top: 36px;
+}
+
+.process__heading {
+    margin: 20px 0 81px;
+    width: 477px;
+}
+
+/* Process list */
+.process-step {
+    padding: 40px 20px;
+    border-bottom: 2px solid var(--Secondary-color-light-green);
+    transition: 0.3s;
+}
+
+.process-step:hover {
+    border-radius: 33px;
+    background: var(--Secondary-color-light-green);
+}
+
+.process-step:hover .process__desc--learn-more {
+    display: inline-block;
+}
+
+.process-step:hover .process__desc {
+    opacity: 0;
+}
+
+.process-step:hover .process-step__img {
+    visibility: visible;
+}
+
+.process-step__num {
+    flex: 4;
+    color: var(--Primary-color-black-green);
+    font-size: 7.2rem;
+    font-weight: 600;
+    line-height: 0.72;
+}
+
+/* Process step center */
+.process-step__center {
+    flex: 9;
+}
+
+.process__desc--learn-more {
+    display: none;
+    margin-top: 22px;
+    position: relative;
+    font-weight: 400;
+    line-height: 1;
+}
+
+.process__desc--learn-more::after {
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 1px;
+    background: var(--Primary-text-color-black);
+}
+
+/* Process step right */
+.process-step__right {
+    position: relative;
+    flex: 15;
+}
+.process__desc {
+    font-family: var(--font-family-secondary);
+    color: #7d8188;
+    width: 572px;
+}
+
+.process-step__img {
+    visibility: hidden;
+    position: absolute;
+    bottom: -40px;
+    right: 71px;
+    width: 450px;
+    height: 444px;
+    background-color: transparent;
+    background-image: url('../img/process.png');
+    background-position: -289.145px -71.727px;
+    background-size: 184.868% 125.182%;
+    transition: visibility 0hidden3s;
+}
+
+.process-step__img::after {
+    position: absolute;
+    bottom: 49px;
+    left: 58px;
+    content: '';
+    display: inline-block;
+    width: 163px;
+    height: 24px;
+    background: var(--Secondary-color-light-green);
+    filter: blur(2px);
 }
