--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -949,6 +949,11 @@ button {
     height: 118px;
     border-radius: 50%;
     background: rgba(0, 0, 0, 0.7);
+    transition: background 0.3s;
+}
+
+.project__play-btn:hover.project__play-btn::before {
+    background: var(--Tertiary-color-light-green);
 }
 
 .project__play-btn::after {
@@ -1033,4 +1038,106 @@ button {
 .feature-item__desc {
     width: 286px;
     text-align: center;
+}
+
+/* ------------- Blog ------------- */
+.blog-section {
+    margin-top: 44px;
+}
+
+.blog-header {
+    margin: 10px 0 90px;
+}
+
+.blog-header__heading {
+    width: 555px;
+}
+
+.blog-header__desc {
+    width: 409px;
+    flex-shrink: 0;
+}
+
+.blog-lists {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 30px;
+}
+
+/* Blog item */
+.blog-item:hover .blog-item__info {
+    border-radius: 0px 0px 20px 20px;
+    box-shadow: 0px 12px 74px 0px rgba(91, 91, 91, 0.25);
+    padding-inline: 30px;
+}
+
+.blog-item:hover .blog-item__btn {
+    color: var(--Secondary-color-light-green);
+    background: var(--Primary-color-black-green);
+}
+
+.blog-item:hover .blog-item__info-bottom {
+    margin: 0;
+}
+
+.blog-item__img {
+    position: relative;
+    border-radius: 40px 40px 0px 0px;
+    height: 317px;
+    z-index: 1;
+    background-size: auto 100%;
+    transition: background-size 0.3s ease;
+}
+
+.blog-item:hover .blog-item__img {
+    background-size: auto 125%;
+}
+
+.blog-item__img-1 {
+    background-image: url('../img/blog-1.png');
+}
+
+.blog-item__img-2 {
+    background-image: url('../img/blog-2.png');
+}
+
+.blog-item__img-3 {
+    background-image: url('../img/blog-3.png');
+}
+
+.blog-item__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    margin-top: -39px;
+    height: 243px;
+    padding-top: 65px;
+    transition: 0.3s;
+}
+
+.blog-item__btn {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 107px;
+    height: 26px;
+    border-radius: 20px;
+    background: var(--Secondary-color-light-green);
+    color: #000;
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 1.3;
+    margin-bottom: 13px;
+}
+
+.blog-item__info-bottom {
+    margin-right: 22px;
+    padding: 16px 0 12px;
+    color: var(--text-color-black-gray);
+    text-align: right;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.2;
+    border-top: 1px solid #c4c4c4;
 }
